--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.2",
+    "path-to-regexp": "^8.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
