--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "lucide-react": "^0.562.0",
+    "motion": "^12.29.2",
     "next": "16.1.2",
     "path-to-regexp": "^8.3.0",
     "react": "19.2.3",
