--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "path-to-regexp": "^8.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
